// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlInputListField when \`editable\` is false renders correctly when \`showFieldDescription\` is false 1`] = `
<ListField
  onRemove={null}
  style={
    Object {
      "maxHeight": "100px",
      "overflowY": "auto",
    }
  }
  values={
    Array [
      "testando...",
    ]
  }
/>
`;

exports[`UrlInputListField when \`editable\` is false renders correctly when \`showFieldDescription\` is true 1`] = `
<FormField>
  <b>
    Testando:
    :
  </b>
  <ListField
    onRemove={null}
    style={
      Object {
        "marginTop": "0px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "testando...",
      ]
    }
  />
</FormField>
`;

exports[`UrlInputListField when \`editable\` is true renders correctly 1`] = `
<EditableListInput
  error=""
  field={
    Object {
      "_id": "1",
      "description": "Testando:",
    }
  }
  onChange={[Function]}
  type="url"
  values={
    Array [
      "testando...",
    ]
  }
/>
`;
